<resources>
    <string name="app_name">Assists</string>
    <string name="app_version">Version 1.0.0</string>
    <string name="app_copyright">Made by @ASPOOK</string>

    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_me">Me</string>

    <string name="tab_popular">Popular</string>
    <string name="tab_recents">Recents</string>
    <string name="tab_following">Following</string>
    <string name="tab_debuts">Debuts</string>
    <string name="tab_playoffs">Playoffs</string>
    <string name="tab_gifs">GIFs</string>
    <string name="tab_teams">Teams</string>
    <string name="tab_rebounds">Rebounds</string>

    <string name="gif_tag">GIF</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <string name="transition_name">transition_image</string>
    <string name="follower">Followers</string>
    <string name="loading">loading</string>
    <string name="end">The End</string>

    <string name="menu_grid_style">Grid</string>
    <string name="menu_list_style">List</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>

    <string name="page_size_12">12</string>
    <string name="page_size_20">20</string>
    <string name="page_size_30">30</string>
    <string name="page_size_50">50</string>

    <string name="page_size_title">Shots Page Size</string>
    <string name="page_size_description">The number of shots loaded per request. Smaller page sizes load faster.</string>

    <string name="about">About</string>
    <string name="view_support">View Support</string>

</resources>
