<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/list_style"
        android:icon="@drawable/ic_view_stream_white_24dp"
        android:title="@string/menu_list_style"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/grid_style"
        android:icon="@drawable/ic_view_module_white_24dp"
        android:title="@string/menu_grid_style"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/menu_settings"
        android:visible="false"
        app:showAsAction="always" />
</menu>
