<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context="com.aspook.assists.user.UserActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="32dp"
        android:background="@color/divide_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/page_size_title"
            android:textColor="@color/Charcoal"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/page_size_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_shots_page_size"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_size_minimum"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_size_12"
                android:textColor="@color/Charcoal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_size_normal"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_size_20"
                android:textColor="@color/Charcoal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_size_large"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_size_30"
                android:textColor="@color/Charcoal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_size_maximum"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/page_size_50"
                android:textColor="@color/Charcoal"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/divide_line_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="32dp"
        android:background="@color/divide_line_color" />

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/about"
            android:textColor="@color/Charcoal"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />
    </LinearLayout>

    <include layout="@layout/divide_line_horizontal" />

    <LinearLayout
        android:id="@+id/ll_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/view_support"
            android:textColor="@color/Charcoal"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            app:srcCompat="@drawable/ic_arrow_right_24dp" />
    </LinearLayout>

    <include layout="@layout/divide_line_horizontal" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="32dp"
        android:background="@color/divide_line_color" />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_list_item"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp"
        android:text="@string/logout"
        android:textColor="@color/Charcoal"
        android:textSize="18sp" />

    <include layout="@layout/divide_line_horizontal" />

</LinearLayout>
